--- a/DoAnCNPM_Backend/order_service/Dockerfile
+++ b/DoAnCNPM_Backend/order_service/Dockerfile
@@ -1,20 +1,5 @@
-FROM maven:3.9.6-eclipse-temurin-17 AS builder
-
+FROM openjdk:21-jdk-slim
 WORKDIR /app
-
-COPY pom.xml .
-RUN mvn dependency:go-offline -B
-
-COPY src ./src
-RUN mvn clean package -DskipTests
-
-FROM eclipse-temurin:17-jdk-jammy
-
-WORKDIR /app
-
-COPY --from=builder /app/target/*.jar app.jar
-
-# Cổng ứng dụng
+COPY target/*.jar app.jar
 EXPOSE 9003
-
-CMD ["java", "-jar", "app.jar"]
+ENTRYPOINT ["java", "-jar", "app.jar"]
