--- a/DoAnCNPM_Backend/.github/workflows/ci-cd.yml
+++ b/DoAnCNPM_Backend/.github/workflows/ci-cd.yml
@@ -1,72 +1,38 @@
-name: CI/CD FastFood System
+name: CI/CD Pipeline
 
 on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
 
-    services:
-      postgres:
-        image: postgres:15
-        env:
-          POSTGRES_DB: fastfood
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: 1
-        ports:
-          - 5432:5432
-        options: >-
-          --health-cmd "pg_isready -U postgres"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-
     steps:
-      # 1️⃣ Checkout source
-      - name: Checkout source
-        uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      # 2️⃣ Setup JDK
       - name: Set up JDK 21
-        uses: actions/setup-java@v4
+        uses: actions/setup-java@v3
         with:
           java-version: '21'
           distribution: 'temurin'
-          cache: maven
 
-      # 3️⃣ Build từng service
-      - name: Build all Spring Boot microservices
-        run: |
-          for dir in eureka_server user_service order_service product_service payment_service; do
-            echo "Building $dir ..."
-            cd $dir
-            mvn -B clean package -DskipTests
-            cd ..
-          done
+      - name: Build with Maven
+        run: mvn clean install -DskipTests
 
-      # 4️⃣ Test (tuỳ chọn)
       - name: Run tests
         run: mvn test
 
-      # 5️⃣ Đăng nhập Docker Hub
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      # 6️⃣ Build và push image cho từng service
-      - name: Build and push Docker images
+      - name: Build Docker image
         run: |
-          for dir in eureka_server user_service order_service product_service payment_service; do
-            IMAGE=hoanganhfastfood/${dir}:latest
-            echo "Building Docker image for $dir ..."
-            docker build -t $IMAGE $dir
-            docker push $IMAGE
-          done
+          docker build -t your-dockerhub-username/your-app-name .
+          echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
+          docker push your-dockerhub-username/your-app-name
+
+      - name: Deploy to Server
+        run: |
+          ssh -o StrictHostKeyChecking=no user@your-server-ip 'docker pull your-dockerhub-username/your-app-name && docker run -d your-dockerhub-username/your-app-name'
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
