--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -10,29 +10,75 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # --- 1. Checkout code ---
       - name: Checkout code
         uses: actions/checkout@v3
 
+      # --- 2. Setup JDK 21 ---
       - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
           java-version: '21'
           distribution: 'temurin'
 
-      - name: Build with Maven
+      # --- 3. Build Backend Microservices ---
+      - name: Build Eureka Server
+        working-directory: ./DoAnCNPM_Backend/eureka_server
         run: mvn clean install -DskipTests
 
-      - name: Run tests
-        run: mvn test
+      - name: Build Product Service
+        working-directory: ./DoAnCNPM_Backend/product_service
+        run: mvn clean install -DskipTests
 
-      - name: Build Docker image
+      - name: Build Order Service
+        working-directory: ./DoAnCNPM_Backend/order_service
+        run: mvn clean install -DskipTests
+
+      - name: Build Payment Service
+        working-directory: ./DoAnCNPM_Backend/payment_service
+        run: mvn clean install -DskipTests
+
+      - name: Build User Service
+        working-directory: ./DoAnCNPM_Backend/user_service
+        run: mvn clean install -DskipTests
+
+      # --- 4. Build & Push Docker Images ---
+      - name: Build & Push Docker images
         run: |
-          docker build -t your-dockerhub-username/your-app-name .
           echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
-          docker push your-dockerhub-username/your-app-name
 
-      - name: Deploy to Server
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/eureka-server ./DoAnCNPM_Backend/eureka_server
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/product-service ./DoAnCNPM_Backend/product_service
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/order-service ./DoAnCNPM_Backend/order_service
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/payment-service ./DoAnCNPM_Backend/payment_service
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/user-service ./DoAnCNPM_Backend/user_service
+
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/eureka-server
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/product-service
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/order-service
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/payment-service
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/user-service
+
+      # --- 5. (Optional) Build Frontend Web ---
+      - name: Build Frontend Web
+        working-directory: ./DoAnCNPM_Frontend/web
         run: |
-          ssh -o StrictHostKeyChecking=no user@your-server-ip 'docker pull your-dockerhub-username/your-app-name && docker run -d your-dockerhub-username/your-app-name'
-        env:
-          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+          npm install
+          npm run build
+
+      # --- 6. (Optional) Build Frontend Mobile ---
+      # Nếu bạn dùng React Native / Flutter, có thể thêm ở đây.
+
+      # --- 7. Deploy to Server ---
+      - name: Deploy to Server
+        if: success()
+        run: |
+          ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} '
+          docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }} &&
+          docker pull ${{ secrets.DOCKERHUB_USERNAME }}/eureka-server &&
+          docker pull ${{ secrets.DOCKERHUB_USERNAME }}/product-service &&
+          docker pull ${{ secrets.DOCKERHUB_USERNAME }}/order-service &&
+          docker pull ${{ secrets.DOCKERHUB_USERNAME }}/payment-service &&
+          docker pull ${{ secrets.DOCKERHUB_USERNAME }}/user-service &&
+          docker compose -f /home/${{ secrets.SERVER_USER }}/docker-compose.yml up -d
+          '
