--- a/DoAnCNPM_Backend/payment_service/src/main/resources/application.properties
+++ b/DoAnCNPM_Backend/payment_service/src/main/resources/application.properties
@@ -1,8 +1,6 @@
 spring.application.name=payment-service
 server.port=8083
 
-spring.data.mongodb.uri=mongodb://localhost:27017
-spring.data.mongodb.database=payment
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.prefer-ip-address=true
@@ -13,4 +11,14 @@ momo.secretkey=K951B6PE1waDMi640xX08PD3vg6EkVlz
 momo.url=https://test-payment.momo.vn/v2/gateway/api
 momo.redirect-url=http://localhost:8083/payment/momo/return
 momo.ipn-url=http://localhost:8083/payment/momo/notify
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/foodfast_db
+spring.datasource.username=postgres
+spring.datasource.password=1
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
 
