--- a/DoAnCNPM_Backend/user_service/src/main/resources/application.properties
+++ b/DoAnCNPM_Backend/user_service/src/main/resources/application.properties
@@ -1,8 +1,14 @@
 spring.application.name=user-service
 server.port=8081
 
-spring.data.mongodb.uri=mongodb://localhost:27017
-spring.data.mongodb.database=user
+spring.datasource.url=jdbc:postgresql://localhost:5432/foodfast_db
+spring.datasource.username=postgres
+spring.datasource.password=1
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.prefer-ip-address=true
