--- a/DoAnCNPM_Backend/user_service/src/main/resources/application.properties
+++ b/DoAnCNPM_Backend/user_service/src/main/resources/application.properties
@@ -1,14 +1,20 @@
 spring.application.name=user-service
 server.port=8081
 
+# PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/foodfast_db
 spring.datasource.username=postgres
 spring.datasource.password=1
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+# Hibernate / JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+# Eureka Client
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.prefer-ip-address=true
+
+# Feign logging (tùy chọn)
+logging.level.org.springframework.cloud.openfeign=DEBUG
