--- a/DoAnCNPM_Backend/order_service/Dockerfile
+++ b/DoAnCNPM_Backend/order_service/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:21-jdk-slim
 WORKDIR /app
-COPY target/*.jar app.jar
-EXPOSE 9003
+COPY target/order_service-0.0.1-SNAPSHOT.jar app.jar
+EXPOSE 8082
 ENTRYPOINT ["java", "-jar", "app.jar"]
