--- a/DoAnCNPM_Backend/user_service/Dockerfile
+++ b/DoAnCNPM_Backend/user_service/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:21-jdk-slim
 WORKDIR /app
-COPY target/*.jar app.jar
-EXPOSE 9001
+COPY target/user-service-1.0.0.jar app.jar
+EXPOSE 8081
 ENTRYPOINT ["java", "-jar", "app.jar"]
