--- a/DoAnCNPM_Backend/payment_service/src/main/resources/application.properties
+++ b/DoAnCNPM_Backend/payment_service/src/main/resources/application.properties
@@ -13,6 +13,7 @@ momo.redirect-url=http://localhost:8083/payment/momo/return
 momo.ipn-url=http://localhost:8083/payment/momo/notify
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/foodfast_db
+#spring.datasource.url=jdbc:postgresql://postgres-db:5432/foodfast_db
 spring.datasource.username=postgres
 spring.datasource.password=1
 spring.datasource.driver-class-name=org.postgresql.Driver
