--- a/DoAnCNPM_Backend/product_service/src/main/resources/application.properties
+++ b/DoAnCNPM_Backend/product_service/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=product-service
 server.port=8080
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/foodfast_db
+#spring.datasource.url=jdbc:postgresql://postgres-db:5432/foodfast_db
 spring.datasource.username=postgres
 spring.datasource.password=1
 spring.datasource.driver-class-name=org.postgresql.Driver
