--- a/DoAnCNPM_Backend/order_service/src/main/resources/application.properties
+++ b/DoAnCNPM_Backend/order_service/src/main/resources/application.properties
@@ -5,6 +5,7 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.prefer-ip-address=true
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/foodfast_db
+#+spring.datasource.url=jdbc:postgresql://postgres-db:5432/foodfast_db
 spring.datasource.username=postgres
 spring.datasource.password=1
 spring.datasource.driver-class-name=org.postgresql.Driver
