--- a/DoAnCNPM_Backend/restaurant-service/src/main/resources/application.properties
+++ b/DoAnCNPM_Backend/restaurant-service/src/main/resources/application.properties
@@ -1,16 +1,18 @@
-spring.application.name=product-service
-server.port=8080
+spring.application.name=restaurant-service
+server.port=8083
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.instance.prefer-ip-address=true
+eureka.instance.hostname=localhost
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/foodfast_db
-#spring.datasource.url=jdbc:postgresql://postgres-db:5432/foodfast_db
 spring.datasource.username=postgres
 spring.datasource.password=1
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-eureka.instance.prefer-ip-address=true
+# Feign logging hữu ích khi debug
+logging.level.org.springframework.cloud.openfeign=DEBUG
