--- a/DoAnCNPM_Backend/user_service/pom.xml
+++ b/DoAnCNPM_Backend/user_service/pom.xml
@@ -86,7 +86,10 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
-
+<dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-starter-openfeign</artifactId>
+    </dependency>
         <!-- Test -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
