--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -42,21 +42,30 @@ jobs:
         working-directory: ./DoAnCNPM_Backend/user_service
         run: mvn clean install -DskipTests
 
-      # --- 4. Build & Push Docker Images ---
+      # --- 4. Build Frontend ---
+      - name: Build Frontend
+        working-directory: ./DoAnCNPM_Frontend
+        run: |
+          npm install
+          npm run build
+
+      # --- 5. Login Docker Hub ---
+      - name: Login to Docker Hub
+        run: echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
+
+      # --- 6. Build & Push Docker images ---
       - name: Build & Push Docker images
         run: |
-          echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
-
           docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/eureka-server ./DoAnCNPM_Backend/eureka_server
           docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/product-service ./DoAnCNPM_Backend/product_service
           docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/order-service ./DoAnCNPM_Backend/order_service
           docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/payment-service ./DoAnCNPM_Backend/payment_service
           docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/user-service ./DoAnCNPM_Backend/user_service
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/frontend ./DoAnCNPM_Frontend
 
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/eureka-server
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/product-service
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/order-service
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/payment-service
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/user-service
-
-  
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/frontend
