--- a/DoAnCNPM_Backend/eureka_server/Dockerfile
+++ b/DoAnCNPM_Backend/eureka_server/Dockerfile
@@ -1,4 +1,4 @@
-FROM openjdk:21-jdk-slim
+FROM eclipse-temurin:21-jdk-jammy
 WORKDIR /app
 COPY target/eureka_server-0.0.1-SNAPSHOT.jar app.jar
 EXPOSE 8761
