--- a/DoAnCNPM_Backend/product_service/Dockerfile
+++ b/DoAnCNPM_Backend/product_service/Dockerfile
@@ -1,4 +1,4 @@
-FROM openjdk:21-jdk-slim
+FROM eclipse-temurin:21-jdk-jammy
 WORKDIR /app
 COPY target/product_service-0.0.1-SNAPSHOT.jar app.jar
 EXPOSE 8080
