--- a/DoAnCNPM_Frontend/web/package.json
+++ b/DoAnCNPM_Frontend/web/package.json
@@ -10,17 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.12.2",
+    "@stomp/stompjs": "^7.2.1",
+    "axios": "^1.13.2",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.548.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.9.4",
+    "sockjs-client": "^1.6.1",
     "swiper": "^12.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@tailwindcss/postcss": "^4.1.16",
+    "@types/leaflet": "^1.9.21",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.4",
