--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -94,7 +94,7 @@ services:
     build: ./DoAnCNPM_Backend/payment_service
     container_name: payment-service
     ports:
-      - "8083:8083"
+      - "8084:8084"
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres-db:5432/foodfast_db
       - SPRING_DATASOURCE_USERNAME=postgres
@@ -107,10 +107,27 @@ services:
       - eureka-server
     networks:
       - foodfast-net
-
+  drone-service:
+    build: ./DoAnCNPM_Backend/drone_service
+    container_name: drone-service
+    ports:
+      - "8088:8088"
+    environment:
+      - SPRING_APPLICATION_NAME=drone-service
+      - SERVER_PORT=8088
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres-db:5432/foodfast_db
+      - SPRING_DATASOURCE_USERNAME=postgres
+      - SPRING_DATASOURCE_PASSWORD=1
+      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://eureka-server:8761/eureka/
+    depends_on:
+      - postgres-db
+      - eureka-server
+    networks:
+      - foodfast-net
 volumes:
   pgdata:
 
 networks:
   foodfast-net:
     driver: bridge
+  
