Fix Docker Compose

--- a/DoAnCNPM_Backend/eureka_server/src/main/resources/application.properties
+++ b/DoAnCNPM_Backend/eureka_server/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=eureka_server
 server.port=8761
-eureka.instance.hostname=localhost
+server.address=0.0.0.0
+
+eureka.instance.hostname=eureka-server
 eureka.client.fetch-registry=false
 eureka.client.register-with-eureka=false
