--- a/DoAnCNPM_Backend/restaurant-service/Dockerfile
+++ b/DoAnCNPM_Backend/restaurant-service/Dockerfile
@@ -1,5 +1,5 @@
 FROM eclipse-temurin:21-jdk-jammy
 WORKDIR /app
-COPY target/drone-service-0.0.1-SNAPSHOT.jar app.jar
-EXPOSE 8086
+COPY target/restaurant-service-0.0.1-SNAPSHOT.jar app.jar
+EXPOSE 8083
 ENTRYPOINT ["java", "-jar", "app.jar"]
