--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: CI/CD 
+name: CI/CD
 
 on:
   push:
@@ -9,19 +9,35 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    # --- 1. Services: Postgres container cho Order Service tests ---
+    services:
+      postgres:
+        image: postgres:16
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: 1
+          POSTGRES_DB: foodfast_db
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd "pg_isready -U postgres"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
     steps:
-      # --- 1. Checkout code ---
+      # --- 2. Checkout code ---
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # --- 2. Setup JDK 21 ---
+      # --- 3. Setup JDK 21 ---
       - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
           java-version: '21'
           distribution: 'temurin'
 
-      # --- 3. Build Backend Microservices ---
+      # --- 4. Build Backend Microservices (skip tests except Order Service) ---
       - name: Build Eureka Server
         working-directory: ./DoAnCNPM_Backend/eureka_server
         run: mvn clean install -DskipTests
@@ -30,10 +46,6 @@ jobs:
         working-directory: ./DoAnCNPM_Backend/product_service
         run: mvn clean install -DskipTests
 
-      - name: Build Order Service
-        working-directory: ./DoAnCNPM_Backend/order_service
-        run: mvn test
-
       - name: Build Payment Service
         working-directory: ./DoAnCNPM_Backend/payment_service
         run: mvn clean install -DskipTests
@@ -41,27 +53,31 @@ jobs:
       - name: Build User Service
         working-directory: ./DoAnCNPM_Backend/user_service
         run: mvn clean install -DskipTests
+
       - name: Build Drone Service
         working-directory: ./DoAnCNPM_Backend/drone_service
         run: mvn clean install -DskipTests
 
-      # --- 4. Build & Push Docker Images ---
+      # --- 5. Run Unit + Integration Tests for Order Service ---
+      - name: Run Order Service Tests
+        working-directory: ./DoAnCNPM_Backend/order_service
+        env:
+          SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/foodfast_db
+          SPRING_DATASOURCE_USERNAME: postgres
+          SPRING_DATASOURCE_PASSWORD: 1
+        run: |
+          echo "Running Unit Tests..."
+          mvn test -Dtest=*UnitTest
+          echo "Running Integration Tests..."
+          mvn verify -Dtest=*IntegrationTest
+
+      # --- 6. Build & Push Docker Images (chỉ khi tests pass) ---
       - name: Build & Push Docker images
+        if: success()
         run: |
           echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
 
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/eureka-server ./DoAnCNPM_Backend/eureka_server
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/product-service ./DoAnCNPM_Backend/product_service
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/order-service ./DoAnCNPM_Backend/order_service
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/payment-service ./DoAnCNPM_Backend/payment_service
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/user-service ./DoAnCNPM_Backend/user_service
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/drone-service ./DoAnCNPM_Backend/drone_service
-
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/eureka-server
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/product-service
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/order-service
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/payment-service
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/user-service
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/drone-service
-
-  
+          for service in eureka_server product_service order_service payment_service user_service drone_service; do
+            docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/$service ./DoAnCNPM_Backend/$service
+            docker push ${{ secrets.DOCKERHUB_USERNAME }}/$service
+          done
