--- a/DoAnCNPM_Backend/eureka_server/src/main/resources/application.properties
+++ b/DoAnCNPM_Backend/eureka_server/src/main/resources/application.properties
@@ -5,3 +5,9 @@ server.address=0.0.0.0
 eureka.instance.hostname=eureka-server
 eureka.client.fetch-registry=false
 eureka.client.register-with-eureka=false
+
+# =========================
+# Actuator + Prometheus
+# =========================
+management.endpoints.web.exposure.include=health,info,metrics,prometheus,gateway
+management.endpoint.prometheus.enabled=true
