--- a/DoAnCNPM_Backend/drone_service/src/main/resources/application.properties
+++ b/DoAnCNPM_Backend/drone_service/src/main/resources/application.properties
@@ -33,16 +33,15 @@ spring.zipkin.base-url=http://localhost:9411
 spring.sleuth.sampler.probability=1.0
 
 # ====================================================
-#  CẤU HÌNH ACTUATOR / PROMETHEUS (MONITORING)
-# ====================================================
-management.endpoints.web.exposure.include=health,info,prometheus
-management.endpoint.health.show-details=always
-management.metrics.export.simple.enabled=false
-
-# ====================================================
 #  LOGGING
 # ====================================================
 logging.level.root=INFO
 logging.level.org.springframework=INFO
 logging.level.com.foodfast.drone_service=DEBUG
 logging.file.name=logs/drone-service.log
+
+# =========================
+# Actuator + Prometheus
+# =========================
+management.endpoints.web.exposure.include=health,info,metrics,prometheus,gateway
+management.endpoint.prometheus.enabled=true
