--- a/DoAnCNPM_Backend/order_service/src/main/resources/application.properties
+++ b/DoAnCNPM_Backend/order_service/src/main/resources/application.properties
@@ -13,3 +13,8 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# Monitoring
+management.endpoints.web.exposure.include=health,info,metrics,prometheus
+management.endpoint.prometheus.enabled=true
+management.metrics.export.prometheus.enabled=true
+management.endpoint.health.show-details=always
