--- a/DoAnCNPM_Backend/payment_service/src/main/resources/application.properties
+++ b/DoAnCNPM_Backend/payment_service/src/main/resources/application.properties
@@ -23,3 +23,8 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 
+management.endpoints.web.exposure.include=health,info,metrics,prometheus
+management.endpoint.prometheus.enabled=true
+management.metrics.export.prometheus.enabled=true
+management.endpoint.health.show-details=always
+management.metrics.web.server.request.autotime.enabled=true
