--- a/DoAnCNPM_Backend/product_service/pom.xml
+++ b/DoAnCNPM_Backend/product_service/pom.xml
@@ -36,6 +36,25 @@
     <artifactId>spring-boot-starter-data-jpa</artifactId>
 </dependency>
 
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-security</artifactId>
+</dependency>
+
+
+<!-- Actuator để mở các endpoint /actuator -->
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-actuator</artifactId>
+</dependency>
+
+<!-- Micrometer Prometheus để export metrics -->
+<dependency>
+    <groupId>io.micrometer</groupId>
+    <artifactId>micrometer-registry-prometheus</artifactId>
+</dependency>
+
+
 <!-- PostgreSQL driver -->
 <dependency>
     <groupId>org.postgresql</groupId>
