--- a/DoAnCNPM_Backend/product_service/src/main/resources/application.properties
+++ b/DoAnCNPM_Backend/product_service/src/main/resources/application.properties
@@ -14,3 +14,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.prefer-ip-address=true
+management.endpoints.web.exposure.include=health,info,metrics,prometheus
+management.endpoint.prometheus.enabled=true
+management.metrics.export.prometheus.enabled=true
+management.endpoint.health.show-details=always
+management.metrics.web.server.request.autotime.enabled=true
+#spring.zipkin.base-url=http://localhost:9411
