--- a/DoAnCNPM_Backend/restaurant-service/src/main/resources/application.properties
+++ b/DoAnCNPM_Backend/restaurant-service/src/main/resources/application.properties
@@ -15,3 +15,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Feign logging hữu ích khi debug
 logging.level.org.springframework.cloud.openfeign=DEBUG
+
+management.endpoints.web.exposure.include=health,info,metrics,prometheus
+management.endpoint.prometheus.enabled=true
+management.metrics.export.prometheus.enabled=true
+management.endpoint.health.show-details=always
+management.metrics.web.server.request.autotime.enabled=true
