--- a/DoAnCNPM_Backend/user_service/pom.xml
+++ b/DoAnCNPM_Backend/user_service/pom.xml
@@ -80,6 +80,13 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
 
+<!-- Prometheus metrics export -->
+<dependency>
+    <groupId>io.micrometer</groupId>
+    <artifactId>micrometer-registry-prometheus</artifactId>
+</dependency>
+
+
         <!-- Lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -90,6 +97,13 @@
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-starter-openfeign</artifactId>
     </dependency>
+
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-security</artifactId>
+</dependency>
+
+
         <!-- Test -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
