--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: "3.9"
+
 services:
   postgres-db:
     image: postgres:16
@@ -72,47 +74,11 @@ services:
     networks:
       - foodfast-net
 
-  restaurant-service:
-    build: ./DoAnCNPM_Backend/restaurant-service
-    container_name: restaurant-service
-    ports:
-      - "8083:8083"
-    environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres-db:5432/foodfast_db
-      - SPRING_DATASOURCE_USERNAME=postgres
-      - SPRING_DATASOURCE_PASSWORD=1
-      - SPRING_JPA_HIBERNATE_DDL_AUTO=update
-      - SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT=org.hibernate.dialect.PostgreSQLDialect
-      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://eureka-server:8761/eureka/
-    depends_on:
-      - postgres-db
-      - eureka-server
-    networks:
-      - foodfast-net
-
   order-service:
     build: ./DoAnCNPM_Backend/order_service
     container_name: order-service
     ports:
       - "8082:8082"
-    environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres-db:5432/foodfast_db
-      - SPRING_DATASOURCE_USERNAME=postgres
-      - SPRING_DATASOURCE_PASSWORD=1
-      - SPRING_JPA_HIBERNATE_DDL_AUTO=update
-      - SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT=org.hibernate.dialect.PostgreSQLDialect
-      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://eureka-server:8761/eureka/
-    depends_on:
-      - postgres-db
-      - eureka-server
-    networks:
-      - foodfast-net
-
-  drone-service:
-    build: ./DoAnCNPM_Backend/drone_service
-    container_name: drone-service
-    ports:
-      - "8086:8086"
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres-db:5432/foodfast_db
       - SPRING_DATASOURCE_USERNAME=postgres
@@ -144,8 +110,67 @@ services:
     networks:
       - foodfast-net
 
+  drone-service:
+    build: ./DoAnCNPM_Backend/drone_service
+    container_name: drone-service
+    ports:
+      - "8086:8086"
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres-db:5432/foodfast_db
+      - SPRING_DATASOURCE_USERNAME=postgres
+      - SPRING_DATASOURCE_PASSWORD=1
+      - SPRING_JPA_HIBERNATE_DDL_AUTO=update
+      - SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT=org.hibernate.dialect.PostgreSQLDialect
+      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://eureka-server:8761/eureka/
+    depends_on:
+      - postgres-db
+      - eureka-server
+    networks:
+      - foodfast-net
+
+  # ===== Thêm Node Exporter =====
+  node-exporter:
+    image: prom/node-exporter:latest
+    container_name: node-exporter
+    ports:
+      - "9100:9100"
+    networks:
+      - foodfast-net
+
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    volumes:
+      - D:/cnpm/CNPM-3/monitoring/prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
+    networks:
+      - foodfast-net
+    depends_on:
+      - user-service
+      - product-service
+      - order-service
+      - payment-service
+      - drone-service
+      - node-exporter
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    ports:
+      - "3001:3000"
+    environment:
+      - GF_SECURITY_ADMIN_PASSWORD=1admin1
+    volumes:
+      - grafana-data:/var/lib/grafana
+    networks:
+      - foodfast-net
+    depends_on:
+      - prometheus
+
 volumes:
   pgdata:
+  grafana-data:
 
 networks:
   foodfast-net:
