--- a/DoAnCNPM_Backend/product_service/src/main/resources/application.properties
+++ b/DoAnCNPM_Backend/product_service/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 spring.application.name=product-service
-server.port=8080
+server.port=8088
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/foodfast_db
-#spring.datasource.url=jdbc:postgresql://postgres-db:5432/foodfast_db
+spring.datasource.url=jdbc:postgresql://postgres-db:5432/foodfast_db
 spring.datasource.username=postgres
 spring.datasource.password=1
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -12,11 +11,18 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+# MongoDB
+spring.data.mongodb.host=mongodb
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=foodfast_db
+spring.data.mongodb.username=admin
+spring.data.mongodb.password=admin
+spring.data.mongodb.authentication-database=admin
+
+eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
 eureka.instance.prefer-ip-address=true
 management.endpoints.web.exposure.include=health,info,metrics,prometheus
 management.endpoint.prometheus.enabled=true
 management.metrics.export.prometheus.enabled=true
 management.endpoint.health.show-details=always
 management.metrics.web.server.request.autotime.enabled=true
-#spring.zipkin.base-url=http://localhost:9411
